_2009_02_20__16_17_31_ Chi-Hsiu Liang

  * Accounts for QM rotors that are close to prolate/oblate symmetric or spherical.

_2009_02_20__13_06_31_ Chi-Hsiu Liang

  * Intemediate version while building SS-RS-ME and QM rotors.
  * Add     bool doSSRSMethod;                    // Run steady state and reservoir state routine
    in MesmerFlags.
  * Does empty DOS grain checking. Put the highest cell energy as the grain energy if no average grain energy is available.
  * QM rotor plugin class is examed. Now modifying it again to add near-symmetric top rotor.

_2009_02_16__14_00_39_ Chi-Hsiu Liang

  * Correct an missing part of mesmer.log during merge in main.cpp
  * Commit the change in mesmer.log

2009-02-15 Chris Morley

	* MesmerQA/QA.bat: add an output file to avoid overwriting the
	input file with new non-timestamp interface.
	
	* src/main.cpp: cosmetic change to remove "in main" from cerr output.

	* mesmerDiag.xsl: use also alternative <rateParameters> form
	(as well as <me:activationEnergy>) to show pseudo ILT TS.
	Add check that ILT is being used for the reaction.

2009-02-14 Chris Morley

	* Documentation/Getting StartedTutorial.html: added
	* librarymols.xml,mesmer1.xsl,mesmer2.xsl,mesmerDiag.xsl:
	updated. (Didn't seem to happen at last merge.)
	* src/main.cpp: Remove timestamps from XML filenames and save
	with _prev suffix any existing files about to be overwritten.
	* src/MolecularComponents.cpp,src/System.cpp,src/System.h:
	Further simplification of parsing (more to be done).

_2009_02_13__18_22_02_ Chris Morley  -- Change merged by Chi-Hsiu Liang from branch WithDefaults

  * If a required property/element or attribute is missing a default version is added to XML file, possibly with text 
    to alert user to check the default values.

  * Improved XSLT files: can normalise large E values; handles missing E on products; shows or hides active="false" 
    molecules or reactions;crude horizontal scaling for files with large number of wells.
